Trying to fix layout shift

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -46,7 +46,7 @@ header {
 .header img {
     display: block;
     width: 24px;
-    height: auto;
+    height: 24px;
     padding-bottom: 2px;
 }
 
